--- a/02_standard-pie/package.json
+++ b/02_standard-pie/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "pie-chart",
+  "name": "standard-pie",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
   },
   "scripts": {
