--- a/02_standard-pie/package.json
+++ b/02_standard-pie/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "standard-pie",
+  "name": "pie-chart",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "react-scripts": "2.1.8",
+    "recharts": "^1.5.0",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
