--- a/02_standard-pie/package.json
+++ b/02_standard-pie/package.json
@@ -3,10 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "helmet": "^3.16.0",
+    "knex": "^0.16.3",
+    "knex-cleaner": "^1.1.4",
+    "node": "^11.13.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
     "recharts": "^1.5.0",
+    "sqlite3": "^4.0.6",
     "styled-components": "^4.2.0"
   },
   "scripts": {
