--- a/02_standard-pie/package.json
+++ b/02_standard-pie/package.json
@@ -2,13 +2,21 @@
   "name": "pie-chart",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "server": "nodemon index.js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "knex": "^0.16.3",
     "knex-cleaner": "^1.1.4",
-    "node": "^11.13.0",   
+    "node": "^11.13.0",
     "nodemon": "^1.18.11",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
@@ -16,13 +24,6 @@
     "recharts": "^1.5.0",
     "sqlite3": "^4.0.6",
     "styled-components": "^4.2.0"
-  },
-  "scripts": {
-    "server": "nodemon",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
