wrote s-test yarn scrpt command to test server

--- a/02_standard-pie/package.json
+++ b/02_standard-pie/package.json
@@ -7,7 +7,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "s-test": "jest --watch --verbose"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -33,5 +34,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "jest": {
+		"testEnvironment": "node"
+	},
+  "devDependencies": {
+    "jest": "^24.7.1",
+    "supertest": "^4.0.2"
+  }
 }
